Closed Bug 1669183 Opened 5 years ago Closed 5 years ago

[SHIP] Calling pushState while handling the popstate event produces the wrong history.length.

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Fission Milestone M6b
Tracking Status
firefox83 --- fixed

People

(Reporter: farre, Assigned: farre)

References

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → afarre
Severity: -- → S3
Status: NEW → ASSIGNED
Priority: -- → P2

When adding a new entry while handling popstate, this would go
throught the paremeterized version of AddPendingHistoryChange, which
doesn't re-compute length which would result in an error in
history.length.

Pushed by afarre@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c23f1a298090 Make sure length delta is correctly computed. r=smaug
Blocks: fission-history-m6b
No longer blocks: fission-history
Fission Milestone: --- → M6b
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: