Bug 1669183 - Make sure length delta is correctly computed. r=smaug

When adding a new entry while handling popstate, this would go
throught the paremeterized version of AddPendingHistoryChange, which
doesn't re-compute length which would result in an error in
history.length.

Differential Revision: https://phabricator.services.mozilla.com/D92393